[package]
name = "juicy"
version = "0.1.0"
authors = ["PoohCook <PoohCook@gmail.com>"]
edition = "2021"

[dependencies]
embedded-hal = "1.0.0"
nb = "1"
cortex-m = "0.7"
cortex-m-rt = "0.7.0"
# Panic behaviour, see https://crates.io/keywords/panic-impl for alternatives
panic-halt = "0.2.0"

smart-leds = "0.3.0"
ws2812-spi = "0.4.0"
rtt-target = "0.5.0"
fugit = "0.3.7"

usb-device = "0.3.1"
stm32-usbd = "0.6.0"
usbd-serial = "0.2.0"
heapless = "0.8.0"

[dependencies.stm32f4xx-hal]
version = "0.20.0"
features = ["stm32f405", "usb_fs"]

# Set the default for dependencies.
[profile.dev.package."*"]
opt-level = "s"

[profile.release]
codegen-units = 1
incremental = false
debug = true
lto = true
opt-level = "s"

[[bin]]
name = "juicy"
test = false
bench = false

[features]
mosi_idle_high = []
